# amazon-kinesis-client-rust

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE  README.md  docker-bake.hcl
.github/workflows/: docker.yml  release.yml  test.yml
examples/: sample.properties
examples/example_consumer/: main.rs
src/: checkpointer.rs  kinesis_dynamodb.rs  lib.rs  messages.rs  processor.rs  reader.rs  responses.rs  runner.rs  writer.rs
tests/: checkpointer_tests.rs  tick_tests.rs
tests/mocks/: mock_processor.rs  mock_reader.rs  mock_writer.rs  mod.rs
